// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Link 1`] = `
<div>
  <a
    href="https://getjobber.com"
    target="_self"
  />
</div>
`;

exports[`renders an external Link 1`] = `
<div>
  <a
    href="https://example.com"
    target="_blank"
  />
</div>
`;
